force-app/main/default/objects/Team__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Serie A</fullName>
            </value>
            <value>
                <fullName>Serie B</fullName>
            </value>
            <value>
                <fullName>Serie C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>