force-app/main/default/objects/Team__c/fields/NomeSquadra__c.field-meta.xml
<CustomField>
    <fullName>NomeSquadra__c</fullName>
    <label>NomeSquadra</label>
    <length>155</length>
    <required>true</required>
    <type>Text</type>
</CustomField>