force-app/main/default/objects/Team__c/fields/Sede__c.field-meta.xml
<CustomField>
    <fullName>Sede__c</fullName>
    <label>Sede</label>
    <length>155</length>
    <type>Text</type>
</CustomField>